--- a/views/admin-course-detail.ejs
+++ b/views/admin-course-detail.ejs
@@ -92,6 +92,7 @@
 </head>
 
 <body>
+<input type="hidden" id="course_details" value="<%=CourseID%>" readonly>
 
 
 <!-- **************** MAIN CONTENT START **************** -->
@@ -389,7 +390,7 @@
 
 					<!-- Catd header -->
 					<div class="card-header bg-light border-bottom">
-						<h5 class="card-header-title">The Complete Digital Marketing Course - 12 Courses in 1</h5>
+						<h5 class="card-header-title" id="course_title"></h5>
 					</div>
 
 					<!-- Card body START -->
@@ -404,18 +405,18 @@
 							<!-- Course info and avatar -->
 							<div class="col-md-6">
 								<!-- Info -->
-								<p class="mb-3">Satisfied conveying a dependent contented he gentleman agreeable do be. Warrant private blushes removed an in equally totally if. Delivered dejection necessary objection do Mr prevailed. Mr feeling does chiefly cordial in do.</p>
+								<p class="mb-3" id="course_description"></p>
 
 								
 								<!-- Avatar -->
 								<div class="d-sm-flex align-items-center">
 									<!-- Avatar image -->
 									<div class="avatar avatar-md">
-										<img class="avatar-img rounded-circle" src="/assets/images/avatar/05.jpg" alt="avatar">
+										<img class="avatar-img rounded-circle" alt="avatar" id="owner_profile_picture">
 									</div>
 									<div class="ms-sm-3 mt-2 mt-sm-0">
-										<h6 class="mb-0"><a href="#">By Jacqueline Miller</a></h6>
-										<p class="mb-0 small">Founder Eduport company</p>
+										<h6 class="mb-0"><a href="#" id="course_owner_fullname"></a></h6>
+										<p class="mb-0 small" id="course_owner_title"></p>
 									</div>
 								</div>
 							</div>
@@ -428,25 +429,25 @@
 							<!-- Information item -->
 							<div class="col-md-6">
 								<ul class="list-group list-group-borderless">
-									<li class="list-group-item">
+									<!-- <li class="list-group-item">
 										<span>release date:</span>
 										<span class="h6 mb-0">29 Aug 2020</span>
-									</li>
+									</li> -->
 
 									<li class="list-group-item">
 										<span>Total Hour:</span>
-										<span class="h6 mb-0">4h 50m</span>
+										<span class="h6 mb-0" id="course_duration"></span>
 									</li>
 
 									<li class="list-group-item">
 										<span>Total Enrolled:</span>
-										<span class="h6 mb-0">12,000+</span>
+										<span class="h6 mb-0" id="total_students"></span>
 									</li>
 
-									<li class="list-group-item">
+									<!-- <li class="list-group-item">
 										<span>Certificate:</span>
 										<span class="h6 mb-0">Yes</span>
-									</li>
+									</li> -->
 								</ul>
 							</div>
 
@@ -454,22 +455,22 @@
 							<div class="col-md-6">
 								<ul class="list-group list-group-borderless">
 									<li class="list-group-item">
-										<span>Skills:</span>
-										<span class="h6 mb-0">All level</span>
+										<span>Level:</span>
+										<span class="h6 mb-0"id="course_level">All level</span>
 									</li>
 
 									<li class="list-group-item">
 										<span>Total Lecture:</span>
-										<span class="h6 mb-0">30</span>
+										<span class="h6 mb-0" id="total_lectures">0</span>
 									</li>
 
-									<li class="list-group-item">
+									<!-- <li class="list-group-item">
 										<span>Language:</span>
 										<span class="h6 mb-0">English</span>
-									</li>
+									</li> -->
 
 									<li class="list-group-item">
-										<span>Review:</span>
+										<span>Reviews:</span>
 										<span class="h6 mb-0">4.5<i class="fas fa-star text-warning ms-1"></i></span>
 									</li>
 									
@@ -510,7 +511,7 @@
 								</thead>
 		
 								<!-- Table body START -->
-								<tbody>
+								<tbody id="course_reviews_container">
 									<!-- Table row -->
 									<tr>
 										<!-- Table data -->
@@ -702,7 +703,7 @@
 <script src="/assets/vendor/choices/js/choices.min.js"></script>
 <script src="/assets/vendor/apexcharts/js/apexcharts.min.js"></script>
 <script src="/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js"></script>
-
+<script src="/js/getCourseDetails.js"></script>
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
 
