--- a/views/admin-course-detail.ejs
+++ b/views/admin-course-detail.ejs
@@ -344,41 +344,11 @@
 								<tbody id="course_reviews_container">
 									<!-- Table row -->
 									<tr>
-										<!-- Table data -->
-										<td>
-											<div class="d-flex align-items-center position-relative">
-												<!-- Image -->
-												<div class="avatar avatar-xs mb-2 mb-md-0">
-													<img src="/assets/images/avatar/09.jpg" class="rounded-circle" alt="">
-												</div>
-												<div class="mb-0 ms-2">
-													<!-- Title -->
-													<h6 class="mb-0"><a href="#" class="stretched-link">Lori Stevens</a></h6>
-												</div>
-											</div>
-										</td>
+								
 		
-										<!-- Table data -->
-										<td class="text-center text-sm-start">
-											<h6 class="mb-0">29 Nov 2021</h6>
-										</td>
+									
 		
-										<!-- Table data -->
-										<td>
-											<ul class="list-inline mb-0">
-												<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-												<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-												<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-												<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-												<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-											</ul>
-										</td>
-		
-										<!-- Table data -->
-										<td>
-											<a href="#" class="btn btn-sm btn-info-soft mb-0" data-bs-toggle="modal" data-bs-target="#viewReview">View</a>
-											<button class="btn btn-sm btn-danger-soft me-1 mb-1 mb-md-0" data-bs-toggle="modal" data-bs-target="#deleteReview">Delete</button>
-										</td>
+									<td>Loading......</td>
 									</tr>
 		
 									
@@ -391,22 +361,9 @@
 					<!-- Card body END -->
 		
 					<!-- Card footer START -->
-					<div class="card-footer bg-transparent">
+					<div class="card-footer bg-transparent" id="footer_container">
 						<!-- Pagination START -->
-						<div class="d-sm-flex justify-content-sm-between align-items-sm-center">
-							<!-- Content -->
-							<p class="mb-0 text-center text-sm-start">Showing 1 to 8 of 20 entries</p>
-							<!-- Pagination -->
-							<nav class="d-flex justify-content-center mb-0" aria-label="navigation">
-								<ul class="pagination pagination-sm pagination-primary-soft d-inline-block d-md-flex rounded mb-0">
-									<li class="page-item mb-0"><a class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-left"></i></a></li>
-									<li class="page-item mb-0"><a class="page-link" href="#">1</a></li>
-									<li class="page-item mb-0 active"><a class="page-link" href="#">2</a></li>
-									<li class="page-item mb-0"><a class="page-link" href="#">3</a></li>
-									<li class="page-item mb-0"><a class="page-link" href="#"><i class="fas fa-angle-right"></i></a></li>
-								</ul>
-							</nav>
-						</div>
+					
 						<!-- Pagination END -->
 					</div>
 					<!-- Card footer END -->
@@ -533,6 +490,8 @@
 <script src="/assets/vendor/choices/js/choices.min.js"></script>
 <script src="/assets/vendor/apexcharts/js/apexcharts.min.js"></script>
 <script src="/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js"></script>
+<script src="/js/formatDate.js"></script>
+<script src="/js/paginationScript.js"></script>
 <script src="/js/getCourseDetails.js"></script>
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
