--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -95,30 +95,7 @@
 	
 		<div class="container-fluid">
 			<div class="row">
-				<!-- left -->
-				<div class="col-12 col-lg-6 d-md-flex align-items-center justify-content-center bg-primary bg-opacity-10 vh-lg-100">
-					<div class="p-3 p-lg-5">
-						<!-- Title -->
-						<div class="text-center">
-							<h2 class="fw-bold">Welcome to our largest community</h2>
-							<p class="mb-0 h6 fw-light">Let's learn something new today!</p>
-						</div>
-						<!-- SVG Image -->
-						<img src="/assets/images/element/02.svg" class="mt-5" alt="">
-						<!-- Info -->
-						<div class="d-sm-flex mt-5 align-items-center justify-content-center">
-							<ul class="avatar-group mb-2 mb-sm-0">
-								<li class="avatar avatar-sm"><img class="avatar-img rounded-circle" src="/assets/images/avatar/01.jpg" alt="avatar"></li>
-								<li class="avatar avatar-sm"><img class="avatar-img rounded-circle" src="/assets/images/avatar/02.jpg" alt="avatar"></li>
-								<li class="avatar avatar-sm"><img class="avatar-img rounded-circle" src="/assets/images/avatar/03.jpg" alt="avatar"></li>
-								<li class="avatar avatar-sm"><img class="avatar-img rounded-circle" src="/assets/images/avatar/04.jpg" alt="avatar"></li>
-							</ul>
-							<!-- Content -->
-							<p class="mb-0 h6 fw-light ms-0 ms-sm-3">4k+ Students joined us, now it's your turn.</p>
-						</div>
-					</div>
-				</div>
-
+				
 				<!-- Right -->
 				<div class="col-12 col-lg-6 m-auto">
 					<div class="row my-5">
@@ -130,12 +107,36 @@
 						
 							<!-- Form START -->
 							<form>
+								<!-- First Name -->
+								<div class="mb-4">
+									<label for="firstName" class="form-label">First Name *</label>
+									<div class="input-group input-group-lg">
+										<span class="input-group-text bg-light rounded-start border-0 text-secondary px-3"><i class="bi bi-envelope-fill"></i></span>
+										<input type="text" class="form-control border-0 bg-light rounded-end ps-1" placeholder="First Name" id="firstName">
+									</div>
+								</div>
+								<!-- Last Name -->
+								<div class="mb-4">
+									<label for="lastName" class="form-label">Last Name *</label>
+									<div class="input-group input-group-lg">
+										<span class="input-group-text bg-light rounded-start border-0 text-secondary px-3"><i class="bi bi-envelope-fill"></i></span>
+										<input type="text" class="form-control border-0 bg-light rounded-end ps-1" placeholder="Last Name" id="lastName">
+									</div>
+								</div>
 								<!-- Email -->
 								<div class="mb-4">
 									<label for="exampleInputEmail1" class="form-label">Email address *</label>
 									<div class="input-group input-group-lg">
 										<span class="input-group-text bg-light rounded-start border-0 text-secondary px-3"><i class="bi bi-envelope-fill"></i></span>
 										<input type="email" class="form-control border-0 bg-light rounded-end ps-1" placeholder="E-mail" id="exampleInputEmail1">
+									</div>
+								</div>
+								<!-- User Name -->
+								<div class="mb-4">
+									<label for="userName" class="form-label">User Name *</label>
+									<div class="input-group input-group-lg">
+										<span class="input-group-text bg-light rounded-start border-0 text-secondary px-3"><i class="bi bi-envelope-fill"></i></span>
+										<input type="text" class="form-control border-0 bg-light rounded-end ps-1" placeholder="User Name" id="userName">
 									</div>
 								</div>
 								<!-- Password -->
@@ -174,7 +175,7 @@
 
 							<!-- Sign up link -->
 							<div class="mt-4 text-center">
-								<span>Already have an account?<a href="/admin/signin"> Sign in here</a></span>
+								<span>Already have an account?<a href="/admin/signin"> Sign In here</a></span>
 							</div>
 						</div>
 					</div>
