--- a/views/admin-edit-course-detail.ejs
+++ b/views/admin-edit-course-detail.ejs
@@ -83,6 +83,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/bootstrap-icons/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/choices/css/choices.min.css">
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/glightbox/css/glightbox.css">
+	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/quill/css/quill.snow.css">
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/stepper/css/bs-stepper.min.css">
 	<link rel="stylesheet" type="text/css" href="/assets/vendor/overlay-scrollbar/css/overlayscrollbars.min.css">
@@ -681,9 +682,21 @@
 <script src="/assets/vendor/quill/js/quill.min.js"></script>
 <script src="/assets/vendor/stepper/js/bs-stepper.min.js"></script>
 <script src="/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js"></script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
+<script>
+	document.addEventListener("DOMContentLoaded", function () {
+	  // Initialize the Quill editor
+	  var quill = new Quill("#quilleditor", {
+		theme: "snow", // You can change the theme if needed
+		modules: {
+		  toolbar: "#quilltoolbar",
+		},
+	  });
+	});
+</script>
 
 </body>
 
