Courses List updated and Scholar Lists updated

--- a/views/admin-student-list.ejs
+++ b/views/admin-student-list.ejs
@@ -215,8 +215,8 @@
 
 					<!-- Search bar -->
 					<div class="col-md-8">
-						<form class="rounded position-relative">
-							<input class="form-control bg-transparent" type="search" placeholder="Search" aria-label="Search">
+						<form class="rounded position-relative" id="searchScholarsForm">
+							<input class="form-control bg-transparent" type="search" placeholder="Search" aria-label="Search" id="searchScholarsQuery">
 							<button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
 								<i class="fas fa-search fs-6 "></i>
 							</button>
@@ -255,78 +255,10 @@
 
 					<!-- Tabs content item START -->
 					<div class="tab-pane fade show active" id="nav-preview-tab-1">
-						<div class="row g-4">
+						<div class="row g-4" id="ScholarListContainer">
 
 							<!-- Card item START -->
-							<div class="col-md-6 col-xxl-4">
-								<div class="card bg-transparent border h-100"> 
-									<!-- Card header -->
-									<div class="card-header bg-transparent border-bottom d-flex justify-content-between">
-										<div class="d-sm-flex align-items-center">
-											<!-- Avatar -->
-											<div class="avatar avatar-md flex-shrink-0">
-												<img class="avatar-img rounded-circle" src="/assets/images/avatar/01.jpg" alt="avatar">
-											</div>
-											<!-- Info -->
-											<div class="ms-0 ms-sm-2 mt-2 mt-sm-0">
-												<h5 class="mb-0"><a href="#">John Doe</a></h5>
-												<span class="text-body small"><i class="fas fa-fw fa-map-marker-alt me-1 mt-1"></i>Lagos</span>
-											</div>
-										</div>
-
-										<!-- Edit dropdown -->
-										<div class="dropdown text-end">
-											<a href="#" class="btn btn-sm btn-light btn-round small mb-0" role="button" id="dropdownShare2" data-bs-toggle="dropdown" aria-expanded="false">
-												<i class="bi bi-three-dots fa-fw"></i>
-											</a>
-											<!-- dropdown button -->
-											<ul class="dropdown-menu dropdown-w-sm dropdown-menu-end min-w-auto shadow rounded" aria-labelledby="dropdownShare2">
-												<li><a class="dropdown-item" href="/admin/scholars/details"><i class="bi bi-pencil-square fa-fw me-2"></i>View Detail</a></li>
-												<li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#removeScholar"><i class="bi bi-trash fa-fw me-2"></i>Remove</a></li>
-											</ul>
-										</div>
-									</div>
-
-									<div class="card-body">
-										<!-- Resources -->
-										<div class="d-flex justify-content-between align-items-center mb-3">
-											<div class="d-flex align-items-center">
-												<div class="icon-md bg-success bg-opacity-10 text-success rounded-circle flex-shrink-0"><i class="bi bi-book-half fa-fw"></i></div>
-												<h6 class="mb-0 ms-2 fw-light">Total Resources</h6>
-											</div>
-											<span class="mb-0 fw-bold">0</span>
-										</div>
-
-										<!-- Total courses -->
-										<div class="d-flex justify-content-between align-items-center mb-3">
-											<div class="d-flex align-items-center">
-												<div class="icon-md bg-purple bg-opacity-10 text-purple rounded-circle flex-shrink-0"><i class="fas fa-book fa-fw"></i></div>
-												<h6 class="mb-0 ms-2 fw-light">Total Course Taken</h6>
-											</div>
-											<span class="mb-0 fw-bold">0</span>
-										</div>
-									</div>
-
-									<!-- Card footer -->
-									<div class="card-footer bg-transparent border-top">
-										<div class="d-sm-flex justify-content-between align-items-center">
-											<!-- Rating star -->
-											<h6 class="mb-2 mb-sm-0">
-												<i class="bi bi-calendar fa-fw text-orange me-2"></i><span class="text-body">Join at:</span> 29 Aug 2023
-											</h6>
-											<!-- Buttons -->
-											<div class="text-end text-primary-hover">
-												<a href="#" class="btn btn-link text-body p-0 mb-0 me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="Message" aria-label="Message">
-													<i class="bi bi-envelope-fill"></i>
-												</a>
-												<a href="#" class="btn btn-link text-body p-0 mb-0" data-bs-placement="top" title="" data-bs-original-title="Block" aria-label="Block" data-bs-toggle="modal" data-bs-target="#blockScholar">
-													<i class="fas fa-ban"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+							
 							<!-- Card item END -->
 
 							
@@ -342,7 +274,6 @@
 								<thead>
 									<tr>
 										<th scope="col" class="border-0 rounded-start">Scholar name</th>
-										<th scope="col" class="border-0">Join date</th>
 										<th scope="col" class="border-0">Courses</th>
 										<th scope="col" class="border-0">Resources</th>
 										<th scope="col" class="border-0 rounded-end">Action</th>
@@ -350,47 +281,7 @@
 								</thead>
 
 								<!-- Table body START -->
-								<tbody>
-
-									<!-- Table row -->
-									<tr>
-										<!-- Table data -->
-										<td>
-											<div class="d-flex align-items-center position-relative">
-												<!-- Image -->
-												<div class="avatar avatar-md">
-													<img src="/assets/images/avatar/09.jpg" class="rounded-circle" alt="">
-												</div>
-												<div class="mb-0 ms-3">
-													<!-- Title -->
-													<h6 class="mb-0"><a href="#" class="stretched-link">John Doe</a></h6>
-													<span class="text-body small"><i class="fas fa-fw fa-map-marker-alt me-1 mt-1"></i>Lagos</span>
-												</div>
-											</div>
-										</td>
-
-										<!-- Table data -->
-										<td>29 Aug 2023</td>
-
-										<!-- Table data -->
-										<td>21</td>
-
-										<!-- Table data -->
-										<td>0</td>
-
-										<!-- Table data -->
-										<td>
-											<a href="/admin/scholars/details" class="btn btn-light btn-round me-1 mb-1 mb-md-0" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-												<i class="bi bi-eye"></i>
-											</a>
-											<a href="#" class="btn btn-light btn-round me-1 mb-1 mb-md-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Message">
-												<i class="bi bi-envelope"></i>
-											</a>
-											<button class="btn btn-light btn-round mb-0" data-bs-toggle="modal" data-bs-target="#blockScholar">
-												<i class="fas fa-ban"></i>
-											</button>
-										</td>
-									</tr>
+								<tbody id="tableScholarList">
 
 									
 
@@ -409,20 +300,10 @@
 			<!-- Card footer START -->
 			<div class="card-footer bg-transparent pt-0 px-0">
 				<!-- Pagination START -->
-				<div class="d-sm-flex justify-content-sm-between align-items-sm-center">
-					<!-- Content -->
-					<p class="mb-0 text-center text-sm-start">Showing 1 to 8 of 20 entries</p>
-					<!-- Pagination -->
-					<nav class="d-flex justify-content-center mb-0" aria-label="navigation">
-						<ul class="pagination pagination-sm pagination-primary-soft mb-0 pb-0 px-0">
-							<li class="page-item mb-0"><a class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-left"></i></a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">1</a></li>
-							<li class="page-item mb-0 active"><a class="page-link" href="#">2</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">3</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#"><i class="fas fa-angle-right"></i></a></li>
-						</ul>
-					</nav>
+				<div id="pageCountContainer"></div>				
+				<div class="d-sm-flex justify-content-sm-between align-items-sm-center" id="footer_container">
 				</div>
+
 				<!-- Pagination END -->
 			</div>
 			<!-- Card footer END -->
@@ -486,27 +367,8 @@
 			</div>
 
 			<!-- Modal body -->
-			<div class="modal-body p-5">
-				<form action="">
-				<!-- Name -->
-				<span class="small">Scholar Name:</span>
-				<h6 class="mb-3">John Doe</h6>
-
-				<!-- Email -->
-				<span class="small">Scholar Email id:</span>
-				<h6 class="mb-3">example@gmail.com</h6>
-
-				<!-- Summary -->
-				<span class="small">NOTE:</span>
-				<p class="text-dark mb-2">Completing this process will block this scholar from the ASFIScholar platform, ADMIN can unblock later.</p>
-				<button type="button" class="btn btn-danger-soft my-0">Block</button>
-			</form>
-			</div>
-
-			<!-- Modal footer -->
-			<div class="modal-footer">
-				<button type="button" class="btn btn-danger-soft my-0" data-bs-dismiss="modal">Close</button>
-			</div>
+			<div class="modal-body p-5" id="block_modal">
+				
 		</div>
 	</div>
 </div>   
@@ -521,6 +383,12 @@
 <!-- Vendors -->
 <script src="/assets/vendor/aos/aos.js"></script>
 <script src="/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js"></script>
+<script src="/js/paginationScript.js"></script>
+<script src="/js/formatDate.js"></script>
+<script src="/js/scholars/blockScholar.js"></script>
+<script src="/js/scholars/updateScholarsList.js"></script>
+<script src="/js/scholars/getAllScholars.js"></script>
+
 
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
