--- a/views/admin-course-list.ejs
+++ b/views/admin-course-list.ejs
@@ -214,7 +214,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4 bg-primary bg-opacity-10 border border-primary rounded-3">
 					<h6>Total Courses</h6>
-					<h2 class="mb-0 fs-1 text-primary">1200</h2>
+					<h2 class="mb-0 fs-1 text-primary" id="TotalCourses">0</h2>
 				</div>
 			</div>
 
@@ -222,7 +222,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4 bg-success bg-opacity-10 border border-success rounded-3">
 					<h6>Activated Courses</h6>
-					<h2 class="mb-0 fs-1 text-success">996</h2>
+					<h2 class="mb-0 fs-1 text-success" id="TotalActivated">0</h2>
 				</div>
 			</div>
 
@@ -230,7 +230,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4  bg-warning bg-opacity-15 border border-warning rounded-3">
 					<h6>Pending Courses</h6>
-					<h2 class="mb-0 fs-1 text-warning">200</h2>
+					<h2 class="mb-0 fs-1 text-warning" id="TotalPending">0</h2>
 				</div>
 			</div>
 		</div>
@@ -245,8 +245,8 @@
 				<div class="row g-3 align-items-center justify-content-between">
 					<!-- Search bar -->
 					<div class="col-md-8">
-						<form class="rounded position-relative">
-							<input class="form-control bg-body" type="search" placeholder="Search" aria-label="Search">
+						<form class="rounded position-relative" id="searchCourses">
+							<input class="form-control bg-body" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
 							<button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
 								<i class="fas fa-search fs-6 "></i>
 							</button>
@@ -257,12 +257,11 @@
 					<div class="col-md-3">
 						<!-- Short by filter -->
 						<form>
-							<select class="form-select js-choice border-0 z-index-9" aria-label=".form-select-sm">
+							<select class="form-select js-choice border-0 z-index-9" aria-label=".form-select-sm" id="sort_by">
 								<option value="">Sort by</option>
-								<option>Newest</option>
-								<option>Oldest</option>
-								<option>Accepted</option>
-								<option>Rejected</option>
+								<option value="applied">Pending</option>
+								<option value="live">Live</option>
+								<option value="rejected">Rejected</option>
 							</select>
 						</form>
 					</div>
@@ -291,108 +290,9 @@
 						</thead>
 						
 						<!-- Table body START -->
-						<tbody>
+						<tbody id="course_list_Container">
 							
-							<!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-										<!-- Image -->
-										<div class="w-60px">
-											<img src="/assets/images/courses/4by3/08.jpg" class="rounded" alt="">
-										</div>
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Building Scalable APIs with GraphQL</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-										<!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/09.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Lori Stevens</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>28 Oct 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-primary">Beginner</span> </td>
-
-								<!-- Table data -->
-								<td><a href="/admin/course/details" class="btn btn-sm btn-dark me-1 mb-1 mb-md-0">View</a></td>
-
-								<!-- Table data -->
-								<td> <span class="badge bg-warning bg-opacity-15 text-warning">Pending</span> </td>
-
-								<!-- Table data -->
-								<td>
-									<a href="#" class="btn btn-sm btn-success-soft me-1 mb-1 mb-md-0">Approve</a>
-									<button class="btn btn-sm btn-secondary-soft mb-0">Reject</button>
-								</td>
-							</tr>
-
-							
-
-							<!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-										<!-- Image -->
-										<div class="w-60px">
-											<img src="/assets/images/courses/4by3/02.jpg" class="rounded" alt="">
-										</div>
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Graphic Design Masterclass</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-										<!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/05.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Carolyn Ortiz</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>28 Aug 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-orange">All level</span> </td>
-
-								<!-- Table data -->
-								<td><a href="/admin/course/details" class="btn btn-sm btn-dark me-1 mb-1 mb-md-0">View</a></td>
-
-								<!-- Table data -->
-								<td>
-									<span class="badge bg-success bg-opacity-15 text-success">Live</span>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<a href="/admin/courses/edit" class="btn btn-sm btn-dark me-1 mb-1 mb-md-0">Edit</a>
-								</td>
-							</tr>
+	
 
 							
 
@@ -408,20 +308,10 @@
 			<!-- Card footer START -->
 			<div class="card-footer bg-transparent pt-0">
 				<!-- Pagination START -->
-				<div class="d-sm-flex justify-content-sm-between align-items-sm-center">
-					<!-- Content -->
-					<p class="mb-0 text-center text-sm-start">Showing 1 to 8 of 20 entries</p>
-					<!-- Pagination -->
-					<nav class="d-flex justify-content-center mb-0" aria-label="navigation">
-						<ul class="pagination pagination-sm pagination-primary-soft d-inline-block d-md-flex rounded mb-0">
-							<li class="page-item mb-0"><a class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-left"></i></a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">1</a></li>
-							<li class="page-item mb-0 active"><a class="page-link" href="#">2</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">3</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#"><i class="fas fa-angle-right"></i></a></li>
-						</ul>
-					</nav>
+				<div class="d-sm-flex justify-content-sm-between align-items-sm-center" id="footer_container">
 				</div>
+				<div id="pageCountContainer"></div>
+
 				<!-- Pagination END -->
 			</div>
 			<!-- Card footer END -->
@@ -448,6 +338,15 @@
 
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
+
+<script src="/js/courses/countActivatedCourses.js"></script>
+<script src="/js/courses/countPendingCourses.js"></script>
+<script src="/js/courses/countTotalCourses.js"></script>
+<script src="/js/formatDate.js"></script>
+<script src="/js/courses/updateCourseslist.js"></script>
+<script src="/js/paginationScript.js"></script>
+<script src="/js/courses/coursesList.js"></script>
+
 
 </body>
 
