--- a/views/ScholarUploadRequests.ejs
+++ b/views/ScholarUploadRequests.ejs
@@ -212,7 +212,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4 bg-primary bg-opacity-10 border border-primary rounded-3">
 					<h6>Total</h6>
-					<h2 class="mb-0 fs-1 text-primary">1200</h2>
+					<h2 class="mb-0 fs-1 text-primary" id="total_resources_count">0</h2>
 				</div>
 			</div>
 
@@ -220,7 +220,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4 bg-success bg-opacity-10 border border-success rounded-3">
 					<h6>Activated</h6>
-					<h2 class="mb-0 fs-1 text-success">996</h2>
+					<h2 class="mb-0 fs-1 text-success" id="total_active_resources">0</h2>
 				</div>
 			</div>
 
@@ -228,7 +228,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="text-center p-4  bg-warning bg-opacity-15 border border-warning rounded-3">
 					<h6>Pending</h6>
-					<h2 class="mb-0 fs-1 text-warning">200</h2>
+					<h2 class="mb-0 fs-1 text-warning" id="total_pending_resources">0</h2>
 				</div>
 			</div>
 		</div>
@@ -243,8 +243,8 @@
 				<div class="row g-3 align-items-center justify-content-between">
 					<!-- Search bar -->
 					<div class="col-md-8">
-						<form class="rounded position-relative">
-							<input class="form-control bg-body" type="search" placeholder="Search" aria-label="Search">
+						<form class="rounded position-relative" id="searchResources">
+							<input class="form-control bg-body" type="search" placeholder="Search" aria-label="Search" id="searchForResources">
 							<button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
 								<i class="fas fa-search fs-6 "></i>
 							</button>
@@ -254,14 +254,16 @@
 					<!-- Select option -->
 					<div class="col-md-3">
 						<!-- Short by filter -->
-						<form>
-							<select class="form-select js-choice border-0 z-index-9" aria-label=".form-select-sm">
+						<form id="filterByType">
+							<select class="form-select js-choice border-0 z-index-9" aria-label=".form-select-sm" id="filterType">
 								<option value="">Sort by</option>
-								<option>Newest</option>
-								<option>Oldest</option>
-								<option>Accepted</option>
-								<option>Rejected</option>
+								<option value="all">All</option>
+								<option value="books">Books</option>
+								<option value="publication">Links</option>
+								<option value="podcast">Podcast</option>
+								<option value="tutorial">Tutorials</option>
 							</select>
+							<input type="submit" hidden id="submitFilter">
 						</form>
 					</div>
 				</div>
@@ -280,7 +282,7 @@
 							<tr>
 								<th scope="col" class="border-0 rounded-start">Title</th>
 								<th scope="col" class="border-0">Scholar</th>
-								<th scope="col" class="border-0">Added Date</th>
+								<!-- <th scope="col" class="border-0">Added Date</th> -->
 								<th scope="col" class="border-0">Type</th>
 								<th scope="col" class="border-0">Status</th>
 								<th scope="col" class="border-0 rounded-end">Action</th>
@@ -288,199 +290,8 @@
 						</thead>
 						
 						<!-- Table body START -->
-						<tbody>
+						<tbody id="userResourceContainer">
 							
-							<!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-					
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Building Scalable APIs with GraphQL</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-										<!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/09.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Lori Stevens</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>28 Oct 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-primary">PDF</span> </td>
-
-
-								<!-- Table data -->
-								<td> <span class="badge bg-warning bg-opacity-15 text-warning">Pending</span> </td>
-
-								<!-- Table data -->
-								<td>
-                                    <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail">View</a>
-									<a href="#" class="btn btn-sm btn-success-soft me-1 mb-1 mb-md-0">Approve</a>
-									<button class="btn btn-sm btn-danger mb-0">Reject</button>
-                                    
-
-								</td>
-							</tr>
-
-							<!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Bootstrap 5 From Scratch</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-                                        <!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/05.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Billy Vasquez</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>16 Oct 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-purple">Podcast</span> </td>
-
-
-								<!-- Table data -->
-								<td>
-									<span class="badge bg-warning bg-opacity-15 text-warning">Pending</span>
-								</td>
-
-								<!-- Table data -->
-								<td>
-                                    <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail">View</a>
-									<a href="#" class="btn btn-sm btn-success-soft me-1 mb-1 mb-md-0">Approve</a>
-									<button class="btn btn-sm btn-danger mb-0">Reject</button>
-                                    
-
-								</td>
-							</tr>
-
-                            <!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Bootstrap 5 From Scratch</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-                                        <!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/05.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Billy Vasquez</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>16 Oct 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-purple">Publication/URL</span> </td>
-
-
-								<!-- Table data -->
-								<td>
-									<span class="badge bg-warning bg-opacity-15 text-warning">Pending</span>
-								</td>
-
-								<!-- Table data -->
-								<td>
-                                    <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail">View</a>
-									<a href="#" class="btn btn-sm btn-success-soft me-1 mb-1 mb-md-0">Approve</a>
-									<button class="btn btn-sm btn-danger mb-0">Reject</button>
-                                    
-
-								</td>
-							</tr>
-
-							
-
-							<!-- Table row -->
-							<tr>
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center position-relative">
-					
-										<!-- Title -->
-										<h6 class="table-responsive-title mb-0 ms-2">	
-											<a href="#" class="stretched-link">Building Scalable APIs with GraphQL</a>
-										</h6>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<div class="d-flex align-items-center mb-3">
-										<!-- Avatar -->
-										<div class="avatar avatar-xs flex-shrink-0">
-											<img class="avatar-img rounded-circle" src="/assets/images/avatar/09.jpg" alt="avatar">
-										</div>
-										<!-- Info -->
-										<div class="ms-2">
-											<h6 class="mb-0 fw-light">Lori Stevens</h6>
-										</div>
-									</div>
-								</td>
-
-								<!-- Table data -->
-								<td>28 Oct 2021</td>
-
-								<!-- Table data -->
-								<td> <span class="badge text-bg-primary">PDF</span> </td>
-
-
-								<!-- Table data -->
-								<td>
-									<span class="badge bg-success bg-opacity-15 text-success">Live</span>
-								</td>
-
-								<!-- Table data -->
-								<td>
-									<a href="#" class="btn btn-sm btn-dark me-1 mb-1 mb-md-0" data-bs-toggle="modal" data-bs-target="#appDetail">View</a>
-								</td>
-							</tr>
-
-
 						</tbody>
 						<!-- Table body END -->
 					</table>
@@ -494,18 +305,9 @@
 			<div class="card-footer bg-transparent pt-0">
 				<!-- Pagination START -->
 				<div class="d-sm-flex justify-content-sm-between align-items-sm-center">
-					<!-- Content -->
-					<p class="mb-0 text-center text-sm-start">Showing 1 to 8 of 20 entries</p>
-					<!-- Pagination -->
-					<nav class="d-flex justify-content-center mb-0" aria-label="navigation">
-						<ul class="pagination pagination-sm pagination-primary-soft d-inline-block d-md-flex rounded mb-0">
-							<li class="page-item mb-0"><a class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-left"></i></a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">1</a></li>
-							<li class="page-item mb-0 active"><a class="page-link" href="#">2</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#">3</a></li>
-							<li class="page-item mb-0"><a class="page-link" href="#"><i class="fas fa-angle-right"></i></a></li>
-						</ul>
-					</nav>
+					<div id="paginationContainer"></div>
+					<div id="footer_container"></div>
+				
 				</div>
 				<!-- Pagination END -->
 			</div>
@@ -568,6 +370,11 @@
 
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
+
+<script src="/js/formatDate.js"></script>
+<script src="/js/paginationScript.js"></script>
+<script src="/js/scholars/uploadRequest.js"></script>
+<script src="/js/scholars/AllResources.js"></script>
 
 </body>
 
